--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "BlogDB": "Data Source=./BackEndblog.db;"
+    //SQL LITE "BlogDB": "Data Source=./BackEndblog.db;"
+    "BlogDB": "Data Source=tcp:s08.everleap.com;Initial Catalog=DB_4058_devcmeetup;User ID=DB_4058_devcmeetup_user;Password=MyUserPassword;Integrated Security=False;"
 
   },
   "Logging": {
